# pr1

./: CMakeLists.txt  task1.cpp  task2.cpp
t1/: t3_t3.cpp  t4_t4.cpp  t5_t5.cpp
t2/: main.cpp  stats.xlsx  t2_t1.cpp  t2_t2.cpp  t2_t2_2.cpp  t2_t2_3.cpp
t3/: task1.cpp
